--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,5 +12,5 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="merge develop and master(have merged bug)." />
+        android:text="merge develop and master(have merged bug).after merge in master, do something" />
 </RelativeLayout>
